preflight/tests/ui/fail-wrong-impl.stderr
error: expected a trait implementation of `Avionics`
  --> $DIR/fail-wrong-impl.rs:15:6
   |
15 | impl Cool for Controller {}
   |      ^^^^
